# AeroDocs-RAG

./: AeroDocs-RAG Guidelines.pages  README.md  ingest_pipeline.py  pyproject.toml  query_engine.py  vector_ingest.py
aircraft_amm_mock/: ATA_21_AirConditioning_Pack_Removal.md  ATA_27_Flap_Actuator_Inspection.md  ATA_28_Fuel_Pump_Replacement.md  ATA_29_Hydraulic_Reservoir_Service.md  ATA_32_LandingGear_BogieBeam_Check.md  ATA_34_ADIRU_BITE_Procedure.md  ATA_36_BleedAir_Leak_Test.md  ATA_49_APU_Oil_Filter_Replacement.md
api/: main.py
output/chunks/: .part-00000-ed3a474b-ce5e-42e1-97a4-59f6dd99beeb-c000.snappy.parquet.crc  part-00000-ed3a474b-ce5e-42e1-97a4-59f6dd99beeb-c000.snappy.parquet
rag/: query_engine.py
