[project]
name = "AeroDocs-RAG"
version = "0.1.0"
description = "RAG for AeroDocs"
authors = [
    {name = "drfaizyahsan",email = "dr.faizy.ahsan@gmail.com"},
]
dependencies = ["pyspark==4.1.2", "langchain>=1.3.11", "langchain-text-splitters>=1.1.2", "pyarrow>=24.0.0", "sentence-transformers>=5.6.0", "chromadb>=1.5.9", "langchain-ollama>=1.1.0", "ollama>=0.6.2"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
